2005-12-17  Sushma Rai  <rsushma@novell.com>

	* storage/main.c (setup_calendar_factory): Set the offline/online mode
	of the calendar as it impl_setLineStatus() does not get invoked when
	started in offline mode. This fixes the problem of not loading 
	addressbook contents when started in offline mode.
	(setup_addressbook_factory): Similar.

	* calendar/e-cal-backend-exchange.c (set_mode): Return if failed to 
	retrieve the folder, and set the mode only if successful, in the
	offline mode.
	Fixes #315105.

	* mail/mail-stub-exchange.c (stub_connect): Set the ExchangeAccount
	mode to offline/online based on exchange component mode, as 
	impl_setLineStatus() does not get invoked when started in offline mode.
	This fixes the problem of not loading the folder, after account 
	creation, even if the user is authenticated.
	Fixes #315605, #315333.

2005-12-12  Sushma Rai  <rsushma@novell.com>

	* configure.in : Bumped the version to 2.5.3
	* NEWS : Updated

2005-12-12  Irene Huang <Irene.Huang@sun.com>

	reviewed by Veerapuram Varadhan <vvaradhan@novell.com>
	
	* addressbook/e-book-backend-exchange.c: Change #include
	<e-util/e-uid.h> to #include <libedataserver/e-uid.h>.

2005-12-12  Sushma Rai  <rsushma@novell.com>

	* calendar/e-cal-backend-exchange.c (set_mode): Return if failed to 
	retrieve the folder, and set the mode only if successful.

2005-12-10  Sushma Rai  <rsushma@novell.com>

	* calendar/e-cal-backend-exchange.c (open_calendar): Return
	authentication failure error code if exchange_account_connect() fails.

2005-12-07  Tor Lillqvist  <tml@novell.com>

	* lib
	* xntlm: Remove these directories from CVS. (Not being used, not
	mentioned in Makefile.am. The code from these directories has been
	moved to e-d-s some time ago.)

	* shell: Remove this directory too. It was compiled, and the
	resulting libfoldertree.la was being linked to
	storage/evolution-exchange-storage. But in fact, the code was
	duplicated in e-d-s's libexchange-storage-1.2.la. This caused a